@@ -1,58 +1,69 @@
 #' Return current environment as list
 #' 
-#' This functions can be used to construct a list with class attribute and merged with another list called super.
+#' This functions can be used to construct a list with class attribute and merged with another list called super. What merge means can be specified with the mergeFun argument.
+#' 
 #' @param class character giving the class name.
 #' @param exports character with the names to include.
-#' @param super object returned by this function which should be extended.
+#' @param super a list which should be extended.
 #' @param superEnv objects in an environment which should be included into your current scope.
+#' @param mergeFun function with two arguments. Knows how to join/merge environments - \code{mergeFun(envir, superEnv)}. Default: \link{envMerge}.
+#' @param envir this is the environment you want to convert to the list. Default is the environment from which the function is called.
 #' 
 #' @seealso \link{ls}, \link{+.Infix}, \link{print.Print}
 #' @rdname retList
 #' @export
 #' 
 #' @examples 
+#' # To get a quick overview of the package:
+#' vignette("Introduction", "aoos")
 #' 
+#' # A simple class with one method:
 #' Test <- function(.x) {
-#'   force(.x)
 #'   getX <- function() .x
 #'   retList("Test")
 #' }
 #' 
-#' Test(2)$getX()
+#' stopifnot(Test(2)$getX() == 2)
+#' 
+#' # A second example inheriting from Test
+#' Test2 <- function(.y) {
+#'   getX2 <- function() .x * 2
+#'   retList("Test2", super = Test(.y))
+#' }
+#' 
+#' stopifnot(Test2(2)$getX() == 2)
+#' stopifnot(Test2(2)$getX2() == 4)
 #' 
 #' ### Rational numbers example with infix operators and print method
 #' 
 #' Rational <- function(numer, denom) {
 #'
-#' e <- environment()
-#' as.environment <- function() e
-#' 
-#' gcd <- function(a, b) if(b == 0) a else Recall(b, a %% b)
+#'   gcd <- function(a, b) if(b == 0) a else Recall(b, a %% b)
 #'
-#' g <- gcd(numer, denom)
-#' numer <- numer / g
-#' denom <- denom / g
+#'   g <- gcd(numer, denom)
+#'   numer <- numer / g
+#'   denom <- denom / g
 #' 
-#' print <- function() cat(paste0(numer, "/", denom, "\n"))
+#'   print <- function() cat(paste0(numer, "/", denom, "\n"))
 #' 
-#' ".+" <- function(that) {
-#'   Rational(numer = numer * that$denom + that$numer * denom,
-#'            denom = denom * that$denom)
-#' }
+#'   ".+" <- function(that) {
+#'     Rational(numer = numer * that$denom + that$numer * denom,
+#'              denom = denom * that$denom)
+#'   }
 #' 
-#' neg <- function() {
-#'   Rational(numer = -numer,
-#'            denom = denom)
-#' }
+#'   neg <- function() {
+#'     Rational(numer = -numer,
+#'              denom = denom)
+#'   }
 #' 
-#' ".-" <- function(that) {
-#'   self + that$neg()
-#' }
+#'   ".-" <- function(that) {
+#'     self + that$neg()
+#'   }
 #' 
-#' # Return only what should be visible from this scope:
-#' self <- retList(c("Rational", "Infix", "Print"),
-#'                 c("numer", "denom", "neg", "print", "as.environment"))
-#' self
+#'   # Return only what should be visible from this scope:
+#'   self <- retList(c("Rational", "Infix", "Print"),
+#'                   c("numer", "denom", "neg", "print"))
+#'   self
 #' 
 #' }
 #' 
@@ -60,17 +71,16 @@
 #' rational + rational
 #' rational - rational
 #' 
-retList <- function(class = NULL, exports = NULL, super = NULL, superEnv = listAsEnv(super)) {
-  envir <- parent.frame()
+retList <- function(class = NULL, exports = NULL, super = NULL, superEnv = listAsEnv(super), mergeFun = envMerge, envir = parent.frame()) {
   exports <- unique(c(if (is.null(exports)) ls(envir) else exports, names(super)))
   superClasses <- if (is.null(super)) "list" else class(super)
-  envMerge(superEnv, envir)
+  mergeFun(envir, superEnv)
   out <- mget(exports, envir)
   class(out) <- c(class, superClasses)
   out
 }
 
-#' \code{funNames} returns the names of functions in the environment from which it is called.
+#' @details \code{funNames} returns the names of functions in the environment from which it is called.
 #' 
 #' @rdname retList
 #' @export
@@ -80,7 +90,7 @@ funNames <- function() {
   names(funInd)[funInd]
 }
 
-#' \code{listAsEnv} returns an evironment. If x is NULL it is empty. If x contains a function, it is the environment of that (the first) function. If x only has non-function values it converts the list to an environment.
+#' @details \code{listAsEnv} returns an evironment. If x is NULL it is empty. If x contains a function, it is the environment of that (the first) function. If x only has non-function values it converts the list to an environment.
 #' 
 #' @param x a list 
 #' 
@@ -92,7 +102,7 @@ listAsEnv <- function(x) {
   list2env(x)
 }
 
-#' \code{getEnvironmentOfFirstFun} returns the environment of the first function in a list.
+#' @details \code{getEnvironmentOfFirstFun} returns the environment of the first function in a list.
 #' 
 #' @rdname retList
 #' @export
